follow HTML structure

--- a/index.html
+++ b/index.html
@@ -1,1 +1,9 @@
-<p>My link in bio</p>
+<!DOCTYPE html>
+<head>
+  <title>Link in bio</title>
+  <meta charset="utf-8"/>
+  <meta name="author" content="Andrew Pham"/>
+</head>
+<body>
+  <p>My link in bio</p>
+</body>
