--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
-<head>
-  <title>Link in bio</title>
-  <meta charset="utf-8"/>
-  <meta name="author" content="Andrew Pham"/>
-</head>
-<body>
-  <p>My link in bio</p>
-</body>
+<html>
+  <head>
+    <title>Link in bio</title>
+    <meta charset="utf-8"/>
+    <meta name="author" content="Andrew Pham"/>
+  </head>
+  <body>
+    <p>My link in bio</p>
+  </body>  
+</html>
