updated link - favorited movies

--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
       </div>
       <div class="link">
         <img src="https://images.unsplash.com/photo-1598153346810-860daa814c4b?q=80&w=1332&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" class="thumbnail"/>
-        <a href="https://youtu.be/z4K2F_OALPQ?si=1n4T4zwleVP8g92E" target="_blank">Favorite relaxing movies</a>
+        <a href="https://youtu.be/z4K2F_OALPQ?si=1n4T4zwleVP8g92E" target="_blank">Favorite movies</a>
       </div>
       <div class="link">
         <img src="https://upload.wikimedia.org/wikipedia/en/d/db/Spirited_Away_Japanese_poster.png" class="thumbnail"/>
